# remote-esphome

./: Dockerfile-addon  Dockerfile-worker  pyproject.toml
.github/workflows/: addon_container.yml  ci.yml  worker_container.yml
esphome_tunnel/: acceptor.py  channel.py  header.py  initiator.py
remote-esphome/: pyproject.toml
remote-esphome/remote_esphome/: __main__.py  acceptor.py  file_sync_service.py  initiator.py  local_logging.py
remote-esphome/remote_esphome/static/: index.html
remote-esphome/test/: test_client.py
remote_esphome/: __init__.py  __main__.py  acceptor.py  header.py  initiator.py
test/: conftest.py  manual.py
