[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "remote_esphome"
authors = [
    {name = "Avishay", email = "xxxxxx@gmail.com"}
]
version = "0.1.0"
description = "Remote ESPHome addon for Home Assistant"
license = {text = "MIT License"}
requires-python = ">= 3.12"

[dependencies]
aiohttp = ">=3.10"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.package-dir]
remote_esphome = "remote_esphome"

[tools.pytest]
auto_asyncio = true

[tool.flake8]
max-line-length=120
