[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "remote_esphome"
authors = [
    {name = "Avishay", email = "xxxxxx@gmail.com"}
]
version = "0.1.0"
description = "Remote ESPHome addon for Home Assistant"
license = {text = "MIT License"}
requires-python = ">= 3.12"
dependencies = [
    "aiohttp >= 3.10"
]

[project.optional-dependencies]
test = ["pytest"]
qa = ["ruff"]

[tool.setuptools.package-dir]
remote_esphome = "remote_esphome"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D105", "D107", "S101", "G004", "TRY301"]

[tool.ruff]
line-length = 120

[tool.flake8]
line-length = 120
